<resources>
    <string name="app_name">FabFit</string>
    <string name="title_count">Steps</string>
    <string name="title_tweets">Tweets</string>
    <string name="title_settings">Settings</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This app won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_title">FabFit is counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="ispaused">FabFit is paused</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="title_profile">Profile</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">No55ivtC0J45mPdDjdxMcv82n</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">peLL4vdtUiWXiOKSDAnwqpCzBe3P2lxLr787sdO1ffxp2GXQwD</string>
    <string name="calories">Calories</string>
    <string name="placholdersteps">10.000</string>
    <string name="stepicon">stepicon</string>
    <string name="steps">steps</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="loading_tweets">Loading</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="height">Height</string>
    <string name="goal">Goal</string>
    <string name="save">Save</string>


</resources>
