<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_walk"
        android:title="@string/title_count" />

    <item
        android:id="@+id/navigation_tweets"
        android:icon="@drawable/ic_tweets"
        android:title="@string/title_tweets" />
    <item
        android:id="@+id/navigation_histroy"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/title_profile" />

</menu>
